[package]
name = "ldk-sample"
version = "0.1.0"
authors = ["Valentine Wallace <vwallace@protonmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
lightning = { path = "./lightning", features = ["max_level_trace"] }
lightning-block-sync = { path = "./lightning-block-sync", features = [ "rpc-client", "tokio" ] }
lightning-invoice = { path = "./lightning-invoice" }
lightning-net-tokio = { path = "./lightning-net-tokio" }
lightning-persister = { path = "./lightning-persister" }
lightning-background-processor = { path = "./lightning-background-processor", features = [ "futures" ] }
lightning-rapid-gossip-sync = { path = "./lightning-rapid-gossip-sync" }

base64 = "0.13.0"
bitcoin = "0.29.0"
bitcoin-bech32 = "0.12"
bech32 = "0.8"
hex = "0.3"
libc = "0.2"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
rand = "0.4"
serde_json = { version = "1.0" }
tokio = { version = "1.28.0", features = [ "io-util", "macros", "rt", "rt-multi-thread", "sync", "net", "time" ] }

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"
